--- a/Proyects/p_Clinic/ClinicaApp/Views/Pacientes/Create.cshtml
+++ b/Proyects/p_Clinic/ClinicaApp/Views/Pacientes/Create.cshtml
@@ -36,9 +36,6 @@
                 <label asp-for="TipoDoc" class="control-label"></label>
                 <input asp-for="TipoDoc" class="form-control" />
                 <P></P>
-                <input type="button" value="DNI" onclick="this.form.TipoDoc.value='DNI'" />
-                <input type="button" value="PASAPORTE" onclick="this.form.TipoDoc.value='PASAPORTE'" />
-                <input type="button" value="CEDULA" onclick="this.form.TipoDoc.value='CEDULA'" />
                 <span asp-validation-for="TipoDoc" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -51,9 +48,12 @@
                 <input asp-for="Antecedentes" class="form-control" />
                 <span asp-validation-for="Antecedentes" class="text-danger"></span>
             </div>
-            <div class="form-group">
+  <div class="form-group">
                 <label asp-for="Estado" class="control-label"></label>
-                <input asp-for="Estado" class="form-control" />
+                <select asp-for="Estado" class="form-control">
+                    <option value="Activo">Activo</option>
+                    <option value="Inactivo">Inactivo</option>
+                </select>
                 <span asp-validation-for="Estado" class="text-danger"></span>
             </div>
             <div class="form-group">
