--- a/Proyects/p_Clinic/ClinicaApp/Views/Pagos/Create.cshtml
+++ b/Proyects/p_Clinic/ClinicaApp/Views/Pagos/Create.cshtml
@@ -12,9 +12,9 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+             <div class="form-group">
                 <label asp-for="PacienteId" class="control-label"></label>
-                <select asp-for="PacienteId" class ="form-control" asp-items="ViewBag.PacienteId">q</select>
+                <select asp-for="PacienteId" class ="form-control" asp-items="ViewBag.PacienteId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Monto" class="control-label"></label>
